[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cave-bat"
version = "0.1.0"
description = "Cave Bat: a Flappy Bird–style Pygame"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pygame>=2.6.0",
]
authors = [
  { name = "Cave Bat Maintainers" }
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://example.com/cave-bat"
Repository = "https://example.com/cave-bat/repo"
Issues = "https://example.com/cave-bat/issues"

[project.scripts]
cave-bat = "cave_bat.game:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["cave_bat*"]

[tool.pytest.ini_options]
addopts = "-q"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0",
  "black>=24.0.0",
  "mypy>=1.10.0",
  "pre-commit>=3.6.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["cave_bat", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "I",  # pyflakes/pycodestyle/imports
  "B",               # bugbear
  "UP",              # pyupgrade
]
ignore = [
  "E203",  # whitespace before ':' (conflicts with black)
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
ignore_missing_imports = true  # pygame stubs may be unavailable

